## Process this with automake to create Makefile.in

AUTOMAKE_OPTIONS = foreign

all: 

templatesdir = $(NTRIPCASTER_TEMPLATEDIR_INST)
templates_DATA =	306.html 400.html 403.html 404.html 504.html	\
			bodytag.html info.html 				\
			mountlist.html		\
			statistics.html admin_describe.html admin.html  \
			alias_add.html alias_del.html       \
			header.html footer.html admin_change.html home.html

EXTRA_DIST = $(templates_DATA)
